# Nerve

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
agents/: README.md  __init__.py  base.py
agents/anthropic/: __init__.py
agents/demo/: live_screenshot_test.py  live_youtube_test.py  run_demo.py
agents/demo/tests/: test_adapter_selection.py
agents/gemini/: __init__.py
agents/mock/: __init__.py
agents/ollama/: __init__.py
agents/openai/: __init__.py
agents/vllm/: __init__.py
benchmarks/: README.md
benchmarks/cassettes/: calculator_demo.json  change_setting.json  clipboard_copy_paste.json
benchmarks/harness/: load.py  record.py  runner.py  tasks.py
benchmarks/tasks/: README.md
core/: Cargo.toml
core/crates/nerve-cli/: Cargo.toml
core/crates/nerve-cli/src/: client.rs  main.rs
core/crates/nerve-core/: Cargo.toml
core/crates/nerve-core/src/: audit.rs  browser.rs  compiler.rs  config.rs  diff.rs  errors.rs  lib.rs  metrics.rs  observation.rs  ocr.rs  runtime.rs  server.rs  session.rs  tls.rs
core/crates/nerve-core/src/actions/: mod.rs
core/crates/nerve-core/src/platform/: linux.rs  linux_native.rs  macos.rs  macos_native.rs  mod.rs  portable.rs  windows.rs  windows_native.rs
core/crates/nerve-core/src/safety/: mod.rs  redact.rs
core/crates/nerve-core/tests/: compiler_ladder.rs  integration.rs
core/crates/nerve-protocol/: Cargo.toml
core/crates/nerve-protocol/src/: action.rs  errors.rs  lib.rs  observation.rs  policy.rs  ws.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: protocol.rs
dashboard/: package.json  playwright.config.mjs
dashboard/static/: dashboard.css  dashboard.js  index.html
dashboard/test/: dashboard.spec.mjs
docs/: api-reference.md  architecture.md  benchmark-methodology.md  competitive-positioning.md  platform-backends.md  privacy.md  protocol.md  quickstart.md  recipes.md  safety.md  threat-model.md
docs/adr/: 0001-daemon-not-library.md  0002-json-not-binary-wire.md  0003-axum-not-tungstenite-direct.md
packaging/debian/: control  nerve.service
packaging/homebrew/: nerve.rb
packaging/macos/: Distribution.xml  build-pkg.sh
packaging/windows/: build-msi.ps1
scripts/: smoke.sh
sdks/python/: README.md  pyproject.toml
sdks/python/nerve/: __init__.py  async_client.py  client.py  typed.py  types.py
sdks/python/tests/: test_types.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/test/: types.test.mjs
