[workspace]
resolver = "2"
members = [
    "crates/nerve-protocol",
    "crates/nerve-core",
    "crates/nerve-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Nerve Contributors"]
repository = "https://github.com/ashtonvaughan/nerve"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
parking_lot = "0.12"
dashmap = "6.1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3.4"
enigo = { version = "0.2", features = ["serde"] }
xcap = "0.0.13"
sysinfo = "0.31"
hostname = "0.4"
once_cell = "1.20"
async-trait = "0.1"
crossbeam-channel = "0.5"
ctrlc = "3.4"
regex-lite = "0.1"
notify = "6.1"
http = "1.1"
tokio-util = "0.7"
bytes = "1.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
