[package]
name = "nerve-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nerve-protocol = { path = "../crates/nerve-protocol" }
serde_json = "1"

[[bin]]
name = "protocol"
path = "fuzz_targets/protocol.rs"
test = false
doc = false
