[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerve-sdk"
version = "0.1.0"
description = "Python SDK for the Nerve real-time computer-use runtime."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Nerve Contributors" }]
dependencies = [
    "websockets>=12.0",
]
keywords = ["ai", "agents", "computer-use", "automation", "rust", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
include = ["nerve*"]
