[package]
name = "nerve-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nerve daemon binary and command-line client."

[[bin]]
name = "nerve"
path = "src/main.rs"

[dependencies]
nerve-core = { path = "../nerve-core" }
nerve-protocol = { path = "../nerve-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
hostname.workspace = true
sysinfo.workspace = true
base64.workspace = true
