[package]
name = "nerve-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nerve daemon binary and command-line client."

[[bin]]
name = "nerve"
path = "src/main.rs"

[features]
default = []
# Forward to nerve-core so `cargo build -p nerve-cli --features ocr-tesseract`
# (and `cargo build --release --features ocr-tesseract` from the workspace
# root, where the workspace default member is nerve-cli) wires Tesseract
# into the binary's capability advertisement.
ocr-tesseract = ["nerve-core/ocr-tesseract"]
macos-accessibility = ["nerve-core/macos-accessibility"]
windows-uia = ["nerve-core/windows-uia"]
linux-atspi = ["nerve-core/linux-atspi"]

[dependencies]
nerve-core = { path = "../nerve-core" }
nerve-protocol = { path = "../nerve-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete = "4.5"
ctrlc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
hostname.workspace = true
sysinfo.workspace = true
base64.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
