[package]
name = "nerve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nerve daemon library: WebSocket server, platform backends, action executor, safety, audit."

[features]
default = ["screen-capture", "input", "clipboard"]
screen-capture = []
input = []
clipboard = []
# Optional Tesseract-backed OCR. Requires libtesseract/libleptonica on the
# host. We feature-gate it because most CI runners don't have those installed.
ocr-tesseract = ["dep:leptess"]
# Browser DOM bridge over the Chrome DevTools Protocol. Adds a thin
# WebSocket client that lets the action compiler resolve click_element
# requests against the real DOM of a Chromium-family browser running
# with --remote-debugging-port. No extra runtime dependency (only the
# `reqwest` HTTP client to discover the WS endpoint).
browser-cdp = ["dep:reqwest"]
# Platform-specific deep integrations. macos-accessibility and linux-atspi
# remain feature-gated because they pull in extra system libraries that
# CI / contributors won't always have; windows-uia has no extra system
# dependency so it's always on for Windows targets via the `windows`
# crate below.
macos-accessibility = ["dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation", "dep:core-graphics", "dep:accessibility-sys"]
linux-atspi = ["dep:atspi"]

[dependencies]
nerve-protocol = { path = "../nerve-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
image.workspace = true
sysinfo.workspace = true
hostname.workspace = true
once_cell.workspace = true
async-trait.workspace = true
dirs.workspace = true
regex-lite = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
axum = { workspace = true }

toml = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
flate2 = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
leptess = { version = "0.14", optional = true }
# CDP runs against the browser on `127.0.0.1`, so we deliberately drop the
# TLS feature — keeps the dependency surface minimal.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", optional = true }
objc2-app-kit = { version = "0.2", optional = true, features = ["NSApplication", "NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", optional = true, features = ["NSString", "NSArray", "NSDictionary"] }
core-graphics = { version = "0.24", optional = true }
accessibility-sys = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Unconditional on Windows: the native SendInput / UIA / GetForegroundWindow
# paths are the only sensible default on the platform. There's no extra
# system dependency at runtime so there's no reason to feature-gate it.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
] }

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.22", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard.workspace = true
enigo.workspace = true
xcap.workspace = true

[dev-dependencies]
tempfile = "3.13"
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

