[package]
name = "nerve-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wire protocol and shared types for Nerve."

[features]
default = []
schema = ["dep:schemars"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemars = { version = "0.8", optional = true, features = ["chrono"] }
